--- a/src/pages/Movie/movie.css
+++ b/src/pages/Movie/movie.css
@@ -268,7 +268,7 @@ iframe {
 }
 
 
-@media screen and (max-width: 1500px) {
+/* @media screen and (max-width: 1500px) {
 
   .details h1 {
     font-size: 30px;
@@ -311,7 +311,7 @@ iframe {
   stroke-width: 5;
 }
 
-}
+} */
 
 
 
