--- a/src/pages/Movie/movie.css
+++ b/src/pages/Movie/movie.css
@@ -268,11 +268,55 @@ iframe {
 }
 
 
+@media screen and (max-width: 1500px) {
 
+  .details h1 {
+    font-size: 30px;
+  }
+
+  .details button {
+    margin-top: 15px;
+    font-size: 11px;
+    padding: 10px 23px;
+}
+
+.details{
+  margin-top: 20px !important;
+}
+
+.details p {
+  font-size: 11px;
+}
+
+.runtime h3 {
+  font-size: 10px !important ;
+}
+
+.rating {
+  font-size: 12px;
+}
+
+.cost1 {
+  padding-top: 15px;
+  font-size: 12px !important;
+}
+
+.trailer {
+  margin-top: -40px;
+  width: 270px;
+  height: 145px;
+}
+
+.circle__progress {
+  stroke-width: 5;
+}
+
+}
 
 
 
 /* MOBILE */
+
 @media screen and (max-width: 550px) {
   .web-movie,
   .cost,
@@ -284,7 +328,11 @@ iframe {
   .mobile-movie,
   .mobile-details {
     display: block;
-    background-color: red !important;
+   
+  }
+
+  .mobile-details{
+    padding: 30px 10px 10px 15px;
   }
 
   .mobile-details .synopsis{
@@ -312,6 +360,7 @@ iframe {
   .cost1 h3 {
     margin-right: 15px;
     width: 50%;
+    font-size: 11px;
   }
   .mobile-movie {
     display: block;
