--- a/src/pages/Movie/movie.css
+++ b/src/pages/Movie/movie.css
@@ -318,11 +318,11 @@ iframe {
 /* MOBILE */
 
 @media screen and (max-width: 550px) {
-  .web-movie,
+  /* .web-movie,
   .cost,
   .details {
     display: none;
-  }
+  } */
 
 
   .mobile-movie,
