--- a/src/pages/Movie/movie.css
+++ b/src/pages/Movie/movie.css
@@ -257,11 +257,11 @@ iframe {
 }
 
 
-/* .mobile-movie,
+.mobile-movie,
 .mobile-details,
 .cost-mobile {
-  display: none;
-} */
+  opacity:0;
+}
 
 .runtime em{
   padding-left: 5px;
