--- a/src/pages/Movie/movie.css
+++ b/src/pages/Movie/movie.css
@@ -270,9 +270,10 @@ iframe {
  margin-left: -2000px;
  margin-top: -200px; 
  background-color: red; */
- margin-left: -2000px;
- margin-top: -200px; 
+ /* margin-left: -2000px;
+ margin-top: -200px;  */
  /* visibility: hidden; */
+ display: none;
 }
 
 
