--- a/src/pages/List/List.css
+++ b/src/pages/List/List.css
@@ -657,6 +657,13 @@ p {
   }
 }
 
+.selected li{
+  color:#B2325D;
+  
+}
+
+
+
 @media only screen and (min-width: 374px) and (max-width: 376px) {
   .card {
     max-width: 110px !important;
