--- a/src/pages/Movie/movie.css
+++ b/src/pages/Movie/movie.css
@@ -1,55 +1,50 @@
 @import url("https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap");
 
-
-
-
 /* KEYFRAMES */
 @keyframes details {
- 0%{
-   margin-left: -1000px;
+  0% {
+    margin-left: -1000px;
   }
-  100%{
-    margin-left:0px;
+  100% {
+    margin-left: 0px;
   }
 }
 
 @keyframes cost {
-  0%{
+  0% {
     margin-right: -1000px;
-   }
-   100%{
-     margin-right:0px;
-   }
- }
+  }
+  100% {
+    margin-right: 0px;
+  }
+}
 
- @keyframes rating {
-  0%{
+@keyframes rating {
+  0% {
     margin-bottom: -500px;
-   }
-   100%{
-     margin-bottom:0px;
-   }
- }
+  }
+  100% {
+    margin-bottom: 0px;
+  }
+}
 
- @keyframes mobile-poster {
-  0%{
+@keyframes mobile-poster {
+  0% {
     margin-top: -500px;
-   }
-   100%{
-     margin-top:0px;
-   }
- }
+  }
+  100% {
+    margin-top: 0px;
+  }
+}
 
 @keyframes details-text {
-  0%{
-     opacity: 0;
-   }
-   100%{
+  0% {
+    opacity: 0;
+  }
+  100% {
     opacity: 1;
-   }
- }
-
-
+  }
+}
 
 #banner {
   color: white;
@@ -58,7 +53,6 @@
   background-position: 70% 30%;
   background-size: cover;
   background-repeat: no-repeat;
-  
 }
 
 .mobile-details img {
@@ -76,12 +70,12 @@
   padding: var(--margin);
   padding-top: 3.5% !important;
   padding-bottom: 3% !important;
-  animation:details 1s forwards 0.5s ease;
+  animation: details 1s forwards 0.5s ease;
 }
 
-.details-text{
+.details-text {
   opacity: 0;
-  animation:details-text 1s forwards 2s ease;
+  animation: details-text 1s forwards 2s ease;
 }
 
 .details h1 {
@@ -111,7 +105,6 @@
   display: flex;
   justify-content: space-between;
   width: 50%;
-  
 }
 
 .trailers {
@@ -119,7 +112,6 @@
   right: 0px !important;
   margin-top: 100px;
   padding-right: 5%;
- 
 }
 
 .trailer {
@@ -128,7 +120,7 @@
   height: 165px;
   margin-bottom: 50px;
   opacity: 0;
-  animation:details-text 1s forwards 3.5s ease;
+  animation: details-text 1s forwards 3.5s ease;
 }
 
 iframe {
@@ -153,13 +145,13 @@ iframe {
   height: 20px;
   display: inline-block;
   margin-right: -2000px;
-  animation:cost 2s forwards 0.5s ease;
+  animation: cost 2s forwards 0.5s ease;
 }
 
 .cost h3 {
   display: inline-block;
   padding-right: 20px !important;
-  font-size:15px !important ;
+  font-size: 15px !important ;
 }
 
 .content1 {
@@ -167,7 +159,7 @@ iframe {
   left: 0;
   padding: 30px;
   opacity: 0;
-  animation:details-text 1s forwards 3s ease;
+  animation: details-text 1s forwards 3s ease;
 }
 
 .content1 li {
@@ -188,7 +180,7 @@ iframe {
   padding-bottom: 4%;
   padding-left: 8%;
   margin-bottom: -200px;
-  animation:rating 1s forwards  ease;
+  animation: rating 1s forwards ease;
 }
 
 .display-container {
@@ -216,7 +208,6 @@ iframe {
   stroke-width: 7;
   stroke-opacity: 0.3;
   stroke-linecap: round;
- 
 }
 
 .circle__progress--fill {
@@ -225,7 +216,7 @@ iframe {
   stroke-opacity: 1;
   stroke-dasharray: var(--initialStroke);
   stroke-dashoffset: var(--initialStroke);
-  transition: stroke-dashoffset var(--transitionDuration) ease ;
+  transition: stroke-dashoffset var(--transitionDuration) ease;
   transition-delay: 4s;
 }
 
@@ -256,37 +247,35 @@ iframe {
   margin-top: 15px;
 }
 
-
-
-.mobile-details1{
- display: none;
-}
-
-.mobile-details{
- display: none;
-}
-.mobile-poster{
+.mobile-details1 {
   display: none;
 }
 
-.mobile-cast{
+.mobile-details {
   display: none;
 }
-.mobile-trailer{
-    opacity: 0;
+.mobile-poster {
+  display: none;
+}
+
+.mobile-cast {
+  display: none;
+}
+.mobile-trailer {
+  margin-top: -900px;
+
+  opacity: 0;
 }
 
 .cost-mobile {
-   display: none;
+  display: none;
 }
 
-.runtime em{
+.runtime em {
   padding-left: 5px;
 }
 
-
 @media screen and (max-width: 1500px) {
-
   .details h1 {
     font-size: 30px;
   }
@@ -295,48 +284,43 @@ iframe {
     margin-top: 15px;
     font-size: 11px;
     padding: 10px 23px;
+  }
+
+  .details {
+    margin-top: 20px !important;
+  }
+
+  .details p {
+    font-size: 11px;
+  }
+
+  .runtime h3 {
+    font-size: 10px !important ;
+  }
+
+  .rating {
+    font-size: 12px;
+  }
+
+  .trailers {
+    margin-top: 60px;
+  }
+
+  .cost1 {
+    padding-top: 15px;
+    font-size: 12px !important;
+  }
+
+  .trailer {
+    margin-top: -40px;
+    width: 270px;
+    height: 145px;
+  }
+
+  .circle__progress {
+    stroke-width: 5;
+  }
 }
-
-.details{
-  margin-top: 20px !important;
-}
-
-.details p {
-  font-size: 11px;
-}
-
-.runtime h3 {
-  font-size: 10px !important ;
-}
-
-.rating {
-  font-size: 12px;
-}
-
-.trailers {
-
-  margin-top: 60px;
-}
- 
-
-.cost1 {
-  padding-top: 15px;
-  font-size: 12px !important;
-}
-
-.trailer {
-  margin-top: -40px;
-  width: 270px;
-  height: 145px;
-}
-
-.circle__progress {
-  stroke-width: 5;
-}
-
-}
-
-
 
 /* MOBILE */
 
@@ -350,30 +334,30 @@ iframe {
   .mobile-movie .bar {
     background-color: black;
   }
-  .mobile-details1{
+  .mobile-details1 {
     display: block;
   }
-  
-  .mobile-details{
+
+  .mobile-details {
     display: block;
   }
-  .mobile-poster{
+  .mobile-poster {
     display: block;
   }
-  
-  .mobile-cast{
+
+  .mobile-cast {
     display: block;
   }
-  .mobile-trailer{
-     opacity: 0;
+  .mobile-trailer {
+    opacity: 0;
   }
-  
+
   .cost-mobile {
     display: block;
   }
 
-  .mobile-trailer{
-     opacity: 1;
+  .mobile-trailer {
+    opacity: 1;
   }
 
   /* .mobile-movie{
@@ -382,38 +366,36 @@ iframe {
 
   .mobile-details {
     display: block !important;
-   
   }
   .mobile-movie,
   .mobile-details {
     display: block;
-   
   }
 
-  .mobile-details{
+  .mobile-details {
     padding: 30px 10px 10px 15px;
   }
 
-  .mobile-details .synopsis{
-    padding-top: 50px ;
+  .mobile-details .synopsis {
+    padding-top: 50px;
     padding-bottom: 50px;
-    
   }
 
-  .mobile-details .synopsis p{
+  .mobile-details button {
+    margin-bottom: 20px;
+  }
+  .mobile-details .synopsis p {
     margin-top: 2px;
   }
 
-  .mobile-movie .navcover{
+  .mobile-movie .navcover {
     border: none;
   }
-
 
   .cost1 {
     padding-top: 20px;
     width: 100%;
     display: flex;
-    
   }
 
   .cost1 h3 {
@@ -427,7 +409,7 @@ iframe {
     width: 100%;
     overflow-x: hidden;
     opacity: 0;
-    animation:details-text 0.5s forwards  ease;
+    animation: details-text 0.5s forwards ease;
   }
 
   .mobile-poster {
@@ -437,13 +419,13 @@ iframe {
     transform: translate(-50%, -25%);
     height: 55%;
     width: 78%;
-   
+
     border-radius: 10px;
     background-size: cover;
     background-repeat: no-repeat;
     box-shadow: -1px 16px 7px -5px rgba(0, 0, 0, 0.55);
     margin-top: -500%;
-    animation:mobile-poster 1.5s forwards 1s ease;
+    animation: mobile-poster 1.5s forwards 1s ease;
   }
 
   .mobile-body {
@@ -455,7 +437,7 @@ iframe {
     height: 20%;
     margin-bottom: -500px;
     border-radius: 19px 19px 0px 0px;
-    animation:rating 1.5s forwards 1s ease;
+    animation: rating 1.5s forwards 1s ease;
   }
 
   .mobile-details {
@@ -463,7 +445,7 @@ iframe {
     border-radius: 19px 19px 0px 0px;
     padding: 30px 10px 10px 25px;
     background-color: ghostwhite !important;
-    padding-bottom: 10  0px;
+    padding-bottom: 10 0px;
   }
 
   .mobile-details h1 {
@@ -471,10 +453,10 @@ iframe {
     font-weight: bold;
   }
 
-  .mobile-details img{
+  .mobile-details img {
     height: 10px;
   }
- 
+
   .mobile-details h5 {
     font-size: 13px;
     font-weight: 100;
@@ -488,7 +470,7 @@ iframe {
   .mobile-details .runtime em {
     padding-left: 3px;
   }
-  
+
   .mobile-details p {
     font-size: 11px;
     line-height: 20px;
@@ -509,10 +491,9 @@ iframe {
   .mobile-trailer {
     position: relative;
     margin-top: -40px;
-    
+
     background-color: ghostwhite !important;
   }
-
 
   .mobile-trailer h2 {
     padding-bottom: 40px;
@@ -524,11 +505,12 @@ iframe {
   .trailers {
     background-color: ghostwhite !important;
     width: 90%;
-    padding-top: 20px;
+    padding-top: 50px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-48%, -15%);
+    margin-top: 100px;
   }
 
   .trailer {
@@ -537,7 +519,4 @@ iframe {
     height: 165px;
     padding-bottom: 60px;
   }
-
- 
 }
-
